syntax = "proto3";

package username_password;

option go_package = "github.com/sbilibin2017/gophkeeper/pkg/grpc";

import "google/protobuf/empty.proto";

// === UsernamePassword Secret ===

message UsernamePasswordAddRequest {
  string secret_name = 1;
  string username = 2;
  string password = 3;
  string meta = 4;
}

message UsernamePasswordGetRequest {
  string secret_name = 1;
}

message UsernamePasswordGetResponse {
  string secret_name = 1;
  string secret_owner = 2;
  string username = 3;
  string password = 4;
  string meta = 5;
  string updated_at = 6;
}

message UsernamePasswordListResponse {
  repeated UsernamePasswordGetResponse items = 1;
}

message UsernamePasswordDeleteRequest {
  string secret_name = 1;
}

// Services

service UsernamePasswordAddService {
  rpc Add(UsernamePasswordAddRequest) returns (google.protobuf.Empty);
}

service UsernamePasswordGetService {
  rpc Get(UsernamePasswordGetRequest) returns (UsernamePasswordGetResponse);
}

service UsernamePasswordListService {
  rpc List(google.protobuf.Empty) returns (UsernamePasswordListResponse);
}

service UsernamePasswordDeleteService {
  rpc Delete(UsernamePasswordDeleteRequest) returns (google.protobuf.Empty);
}
